@@ -183,19 +183,19 @@ ChrootLvmSnapshot::setup_lock (Chroot::SetupType type,
 	{
 	  format fmt(_("%1% chroot: device name not set"));
 	  fmt % get_name();
-	  throw error(fmt, ERROR_LOCK);
+	  throw error(fmt);
 	}
       else if (stat(device.c_str(), &statbuf) == -1)
 	{
 	  format fmt(_("%1% chroot: failed to stat device %2%: %3%"));
 	  fmt % get_name() % device % strerror(errno);
-	  throw error(fmt, ERROR_LOCK);
+	  throw error(fmt);
 	}
       else if (!S_ISBLK(statbuf.st_mode))
 	{
 	  format fmt(_("%1% chroot: %2% is not a block device\n"));
 	  fmt % get_name() % device;
-	  throw error(fmt, ERROR_LOCK);
+	  throw error(fmt);
 	}
       else
 	{
@@ -215,7 +215,7 @@ ChrootLvmSnapshot::setup_lock (Chroot::SetupType type,
 		{
 		  format fmt(_("%1%: failed to lock device: %2%"));
 		  fmt % device % e.what();
-		  throw error(fmt, ERROR_LOCK);
+		  throw error(fmt);
 		}
 	    }
 	  else
@@ -228,7 +228,7 @@ ChrootLvmSnapshot::setup_lock (Chroot::SetupType type,
 		{
 		  format fmt(_("%1%: failed to unlock device: %2%"));
 		  fmt % device % e.what();
-		  throw error(fmt, ERROR_LOCK);
+		  throw error(fmt);
 		}
 	    }
 	}
@@ -256,7 +256,7 @@ ChrootLvmSnapshot::setup_session_info (bool start)
 	{
 	  format fmt(_("%1%: failed to create session file: %2%\n"));
 	  fmt % file % strerror(errno);
-	  throw error(fmt, ERROR_LOCK);
+	  throw error(fmt);
 	}
 
       // Create a stream buffer from the file descriptor.  The fd will
@@ -273,7 +273,7 @@ ChrootLvmSnapshot::setup_session_info (bool start)
 	{
 	  format fmt(_("%1%: lock acquisition failure: %2%\n"));
 	  fmt % file % e.what();
-	  throw error(fmt, ERROR_LOCK);
+	  throw error(fmt);
 	}
 
       print_config(output);
@@ -286,7 +286,7 @@ ChrootLvmSnapshot::setup_session_info (bool start)
 	{
 	  format fmt(_("%1%: lock discard failure: %2%\n"));
 	  fmt % file % e.what();
-	  throw error(fmt, ERROR_LOCK);
+	  throw error(fmt);
 	}
     }
   else /* start == false */
@@ -295,7 +295,7 @@ ChrootLvmSnapshot::setup_session_info (bool start)
 	{
 	  format fmt(_("%1%: failed to unlink session file: %2%\n"));
 	  fmt % file % strerror(errno);
-	  throw error(fmt, ERROR_LOCK);
+	  throw error(fmt);
 	}
     }
 }
